--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         }
     ],
     "require": {
-        "pecee/simple-router": "^5.4"
+        "pecee/simple-router": "^5.4",
+        "firebase/php-jwt": "^6.10"
     }
 }
